--- a/python/csv2ldap.conf
+++ b/python/csv2ldap.conf
@@ -6,12 +6,12 @@ DateFormat					= %d.%m.%Y %X
 server                      = shv-vdc01.shuvoe.rg-rus.ru
 use_ssl                     = yes
 username                    = shuvoe\ldap_updater
-password                    = _u_vengrov_smechnie_imena_suk@_2017
+password                    = _u_vengrov_smechnie_imena_suk@_
 searchfilter                = (&(objectCategory=person)(objectclass=user)(employeeID=*))
 calculated_attrs            = initials,description,displayname,mobile,manager,extensionAttribute1,extensionAttribute2
 
 [CSV]
-CsvPath                     = \\fsc01\logs$\csv2ldap\1C_data.csv
+CsvPath                     = \\fsc01\logs$\csv2ldap\employees.csv
 Delimiter                   = ;
 Encoding                    = utf-8-sig
 
