Added preprosesing for update manager

--- a/python/csv2ldap.conf
+++ b/python/csv2ldap.conf
@@ -11,7 +11,9 @@ searchfilter                = (&(objectCategory=person)(objectclass=user)(employ
 calculated_attrs            = initials,description,displayname,mobile,manager,extensionAttribute1,extensionAttribute2
 
 [CSV]
-CsvPath                     = \\fsc01\logs$\csv2ldap\employees.csv
+CsvInPath                   = \\fsc01\logs$\csv2ldap\employees.csv
+CsvPath                     = \\fsc01\logs$\csv2ldap\employees_new.csv
+XmlPath                     = \\srvweb01\PortalSync\RGRUS_OrgStructure\Structure\RGRusOrgStructure.xml
 Delimiter                   = ;
 Encoding                    = utf-8-sig
 
